# Time_Series_Analysis

./: README.md  config.yaml  pyproject.toml
crypto_mc/outputs/: metrics_20250905_165324.json  metrics_20250905_174534.json  paths_sample_20250905_174534.csv
outputs/: paths_sample_20250904_232741.csv
src/crypto_mc/: cli.py  risk.py  simulation.py
src/crypto_mc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crypto_mc/models/: bootstrap.py  garch.py  gbm.py  jump_diffusion.py
src/crypto_mc/utils/: io.py  returns.py
